# ada_project_2_storm_prediction

./: .gitignore  LICENSE  README.md  TEAM_CONVENTIONS.md  pyproject.toml  reference.md  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/: modules.rst
notebooks-final/: EDA-report.ipynb  Task-1-report.ipynb  Task-3-report.ipynb  Task-4-report.ipynb
predicting_unpredictable/: __init__.py  constants.py  data.py  io.py  metrics.py  plotting.py  preprocess.py  split.py  submission.py
predicting_unpredictable/models/: __init__.py  task1.py  task2.py  task3.py  task4.py
predicting_unpredictable/tests/: __init__.py  conftest.py  test_constants.py  test_data.py  test_io.py  test_metrics.py  test_plotting.py  test_preprocess.py  test_split.py  test_submission.py
predicting_unpredictable/train/: __init__.py  task1.py  task2.py  task3.py  task4.py
