[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "predicting_unpredictable"
version = "0.1.0"
description = "Shared utilities for storm prediction project"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "h5py",
    "huggingface_hub",
    "torch",
    "matplotlib",
    "scikit-learn",
    "opencv-python-headless",
]

[project.optional-dependencies]
dev = ["pytest", "flake8"]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
include = ["predicting_unpredictable*"]
